--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -24,7 +24,8 @@
     <div class="panel-heading">秒杀商品详情</div>
     <div class="panel-body">
         <span id="userTip"> 您还没有登录，请登陆后再操作<br/></span>
-        <span>没有收货地址的提示。。。</span>
+        <span id="userId"></span>
+        <span >没有收货地址的提示。。。</span>
     </div>
     <table class="table" id="goodslist">
         <tr>
@@ -43,10 +44,8 @@
                 <span id="seckillTip"></span>
             </td>
             <td>
-                <form id="seckillForm" method="post" action="/seckill/do_seckill">
-                    <button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>
-                    <input type="hidden" name="goodsId" id="goodsId"/>
-                </form>
+            <button class="btn btn-primary btn-block" type="submit" id="buyButton" onclick="toSeckill()">立即秒杀</button>
+            <input type="hidden" name="goodsId" id="goodsId"/>
 
                 <!--                <input type="hidden" name="goodsId" value="${goods.id}"/>-->
                 <!--                <button class="btn btn-primary btn-block" id="buyButton" onclick="toSecKill()">立即秒杀</button>-->
@@ -72,6 +71,27 @@
 <script>
 
     function toSeckill(){
+        console.log("start");
+        $.ajax({
+            url: "/seckill/asynSeckill",
+            type: "POST",
+            data: {
+                goodsId: $("#goodsId").val()
+            },
+            success: function (data) {
+                console.log(data);
+                if (data.code === 200) {
+                    window.location.href = "/order_detail.htm?orderId="+data.data.orderInfo.id;
+                    layer.msg("sucesss");
+                } else {
+                    layer.msg(data.msg);
+                }
+            },
+            error: function () {
+                layer.msg("客户端请求有误");
+            }
+        })
+        console.log("end");
 
     }
 
@@ -118,6 +138,7 @@
         $("#goodsPrice").text(goods.goodsPrice);
         $("#seckillPrice").text(goods.seckillPrice);
         $("#stockCount").text(goods.stockCount);
+        $("#userId").text(user.id);
         countDown();
     }
 
@@ -153,29 +174,5 @@
             $("#seckillTip").html("秒杀已经结束");
         }
     }
-
-    //
-    // function countDown(){
-    //     var remainSeconds = $("#remainSeconds").val();
-    //     var timeout;
-    //     if(remainSeconds > 0){//秒杀还没开始，倒计时
-    //         $("#buyButton").attr("disabled", true);
-    //         $("#seckillTip").html("秒杀倒计时："+remainSeconds+"秒");
-    //         timeout = setTimeout(function(){
-    //             $("#countDown").text(remainSeconds - 1);
-    //             $("#remainSeconds").val(remainSeconds - 1);
-    //             countDown();
-    //         },1000);
-    //     }else if(remainSeconds == 0){//秒杀进行中
-    //         $("#buyButton").attr("disabled", false);
-    //         if(timeout){
-    //             clearTimeout(timeout);
-    //         }
-    //         $("#seckillTip").html("秒杀进行中");
-    //     }else{//秒杀已经结束
-    //         $("#buyButton").attr("disabled", true);
-    //         $("#seckillTip").html("秒杀已经结束");
-    //     }
-    // }
 </script>
 </html>
