--- a/src/main/resources/static/order_detail.htm
+++ b/src/main/resources/static/order_detail.htm
@@ -86,6 +86,7 @@
                 } else {
                     console.log(data);
                     alert(data.msg);
+                    window.location.href="/goods_list";
                 }
             },
             error: function () {
