:email:添加邮箱通知功能

--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>商品详情</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -19,7 +19,6 @@
     <script type="text/javascript" src="/js/common.js"></script>
 </head>
 <body>
-
 <div class="panel panel-default">
     <div class="panel-heading">秒杀商品详情</div>
     <div class="panel-body">
